--- a/Portfolio.html
+++ b/Portfolio.html
@@ -34,29 +34,84 @@ body {
 
 .div1 {
 	border: 5px outset teal;
-	height: 1000px; width: 50%; margin:0 auto;
+	height: 350px; width: 50%; float: left; 
+	text-align: left;
+	color: white;
+	}
+.div2 {
+  border: 5px outset teal;
+  width: 48%; 
+  height: 810px; float: right;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  background-size:cover;
+}
+.div3 {
+	border: 5px outset teal;
+	height: 350px; width: 50%; float: left; 
+	text-align: center;
+	color: white;
+	}
+.div4 {
+	border: 5px outset teal;
+	height: 300px; width: 100%; float: left; 
 	text-align: center;
 	color: white;
 	}
 
+
 </head>	
 </style>
-<h1 style="background-color: teal; text-align: center; font-size: 50px;">Joey Giesbrecht Portfolio</h1>
+<h1 style="background-color: teal; text-align: center; font-size: 50px;text-shadow:
+	3px 3px 6px; color: white;">Joey Giesbrecht Portfolio
+</h1>
 
 
 <div class = "topnav">
 	<a class="active" href = "#home">Home</a>
-	<a href = "missionS.html">Personal Mission Statement</a>
-	<a href = "myWork.html">My work</a>
+	<a href = "missionS.html">My Work</a>
 	<a href = "volWork.html">Volunteer Work</a>
-	<a href = "references.html">References</a>
+	<a href = "Resume.html">Resume</a>
 </div>
 
 <div class= "div1">
-	<h2> About Me</h2>
-	<p>My name is joey giesbrecht</p>
+	<h2 style= "font-size: 40px; text-shadow: 3px 3px 6px; text-align: center";> About Me</h2>
+	<p style = "font-size: 25px";>
+		My name is Joey Giesbrecht and I have been in the workforce for almost 5 years now.</br>
+		I most recently graduated at Lethbridge College where I recieved my Computer Information
+		Technology Degree.</br> During my time there I developed many technical skills such as programming
+		in many languages, creating databases, networking and much more. On my free time I play and coach basketball,
+		I believe my strongest skills are my eagerness to learn, and my work ethic. That along with my 
+		well rounded skill set, makes me valuable to any team.
+		</p>
 	
 </div>
+
+<div class = "div2">
+	<img src="C:\HTML\Images\tech.jpg" alt="Tech" height = 800px; width = 1200px; >
+</div>
+
+<div class= "div3">
+	<h2 style= "font-size: 40px;  text-shadow: 3px 3px 6px";> References</h2>
+	<p style = "font-size: 25px";>
+		"Extremely hard working and a great guy to have around the workplace"</br>
+		- Pero Spanovic, Chinook Carriers Foreman</p>
+	<p style = "font-size: 25px";>
+		"Great technical knowledge, and one of the best employees Ive ever had"</br>
+		-John Giesbrecht, Lamb Weston Supervisor
+		</p>
+	<p style = "font-size: 25px";>
+		"Awesome person and very reliable employee"</br>
+		-Lisa Johnson, Walmart, Taber
+		</p>
+<div>
+
+<div class= "div4">
+</div>
+
+
+
 
 
 
