--- a/Resume.html
+++ b/Resume.html
@@ -8,6 +8,10 @@ body {
 	background-image: linear-gradient(to bottom right, black, teal);
 	height: 1500px;
 	}
+	
+.container {
+	padding: 30px;
+	}
 h1 a{
 	text-decoration: none;
 	color: #000000;
@@ -15,10 +19,12 @@ h1 a{
 
 </style>
 
-
 <h1 style="background-color: teal; text-align: center; font-size: 50px;">
-<a href="Portfolio.html">Volunteer Work</a></h1>
+<a href="Portfolio.html">Resume</a></h1>
 
+	<div class = "container">
+		<embed src="C:\HTML\Images\Joey Giesbrecht Resume-4.pdf" width="100%" height="1000px"
+		type="application/pdf">
 
 
 
