--- a/missionS.html
+++ b/missionS.html
@@ -8,10 +8,15 @@ body {
 	background-image: linear-gradient(to bottom right, black, teal);
 	height: 1500px;
 	}
+h1 a{
+	text-decoration: none;
+	color: #000000;
+	}
 
 </style>
 
-
+<h1 style="background-color: teal; text-align: center; font-size: 50px;">
+<a href="Portfolio.html">Mission Statement</a></h1>
 
 
 
