--- a/volWork.html
+++ b/volWork.html
@@ -10,15 +10,47 @@ body {
 	}
 h1 a{
 	text-decoration: none;
-	color: #000000;
+	color: #FFFFFF;
 	}
+.voldiv1 {
+	border: 5px outset teal;
+	height: 350px; width: 50%; float: left; 
+	text-align: left;
+	color: white;
+	}
+.voldiv2 {
+  border: 5px outset teal;
+  width: 48%; 
+  height: 810px; 
+  float: right;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  background-size:cover;
+}
+
 
 </style>
 
 
-<h1 style="background-color: teal; text-align: center; font-size: 50px;">
+<h1 style="background-color: teal; text-align: center; font-size: 50px;text-shadow:
+	3px 3px 6px; color: white;">
 <a href="Portfolio.html">Volunteer Work</a></h1>
 
+<div class= "voldiv1">
+	<h2 style= "font-size: 40px; text-shadow: 3px 3px 6px; text-align: center";> Volunteer Experience</h2>
+	<p style = "font-size: 25px";>- I have been a high school basketball coach for 2 years now</br>
+	</br>
+	- Helped high schoolers improve their basketball skills by coordinating drills</br>
+	</br>
+	-Learned to be a good leader
+	
+</div>
+
+
+<div class = "voldiv2">
+	<img src="C:\HTML\Images\basketball.jpg" alt="Bball" height = 800px; width = 1200px; >
+</div>
 
 
 
