--- a/Portfolio.html
+++ b/Portfolio.html
@@ -89,7 +89,7 @@ body {
 </div>
 
 <div class = "div2">
-	<img src="C:\HTML\Images\tech.jpg" alt="Tech" height = 800px; width = 1200px; >
+	<img src="C:\HTML\Images\Me.jpg" alt="Tech" height = 800px; width = 1200px; >
 </div>
 
 <div class= "div3">
