--- a/Resume.html
+++ b/Resume.html
@@ -14,18 +14,19 @@ body {
 	}
 h1 a{
 	text-decoration: none;
-	color: #000000;
+	color: #FFFFFF;
 	}
 
 </style>
 
-<h1 style="background-color: teal; text-align: center; font-size: 50px;">
+<h1 style="background-color: teal; text-align: center; font-size: 50px;text-shadow:
+	3px 3px 6px; color: white;">
 <a href="Portfolio.html">Resume</a></h1>
 
 	<div class = "container">
 		<embed src="C:\HTML\Images\Joey Giesbrecht Resume-4.pdf" width="100%" height="1000px"
 		type="application/pdf">
-
+</div>
 
 
 
