--- a/missionS.html
+++ b/missionS.html
@@ -10,15 +10,19 @@ body {
 	}
 h1 a{
 	text-decoration: none;
-	color: #000000;
+	color: #FFFFFF;
 	}
 
 </style>
 
-<h1 style="background-color: teal; text-align: center; font-size: 50px;">
-<a href="Portfolio.html">Mission Statement</a></h1>
+<h1 style="background-color: teal; text-align: center; font-size:50px; text-shadow:
+	3px 3px 6px; color: white;">
+<a href="Portfolio.html">My Work</a></h1>
 
-
+	<div class = "container">
+		<embed src="" width="100%" height="1000px"
+		type="application/pdf">
+</div>
 
 
 
