--- a/Portfolio.html
+++ b/Portfolio.html
@@ -40,7 +40,7 @@ body {
 	}
 .div2 {
   border: 5px outset teal;
-  width: 48%; 
+  width: %; 
   height: 810px; float: right;
   margin-left: auto;
   margin-right: auto;
@@ -108,6 +108,10 @@ body {
 <div>
 
 <div class= "div4">
+<h2 style= "font-size: 40px;  text-shadow: 3px 3px 6px";> Mission Statement</h2>
+	<p style = "font-size: 25px";>
+	To try and become a better version of myself each and every day. Strive to make achieve my goals, 
+	and to treat people with kindess and respect.
 </div>
 
 
