--- a/Resume.html
+++ b/Resume.html
@@ -24,7 +24,7 @@ h1 a{
 <a href="Portfolio.html">Resume</a></h1>
 
 	<div class = "container">
-		<embed src="C:\HTML\Images\Joey Giesbrecht Resume-4.pdf" width="100%" height="1000px"
+		<embed src="Images\Joey Giesbrecht Resume-4.pdf" width="100%" height="1000px"
 		type="application/pdf">
 </div>
 
