--- a/volWork.html
+++ b/volWork.html
@@ -43,13 +43,15 @@ h1 a{
 	</br>
 	- Helped high schoolers improve their basketball skills by coordinating drills</br>
 	</br>
-	-Learned to be a good leader
+	-Learned to be a good leader</br>
+	</br>
+	-Also volunteered as a basketball ref on multiple occasions
 	
 </div>
 
 
 <div class = "voldiv2">
-	<img src="C:\HTML\Images\basketball.jpg" alt="Bball" height = 800px; width = 1200px; >
+	<img src="Images\basketball.jpg" alt="Bball" height = 800px; >
 </div>
 
 
