--- a/missionS.html
+++ b/missionS.html
@@ -20,8 +20,9 @@ h1 a{
 <a href="Portfolio.html">My Work</a></h1>
 
 	<div class = "container">
-		<embed src="" width="100%" height="1000px"
+		<embed src="https://joeygiesbrecht6.wixsite.com/jg3cards" width="50%" height="1000px"
 		type="application/pdf">
+		</embed>
 </div>
 
 
