--- a/Portfolio.html
+++ b/Portfolio.html
@@ -55,7 +55,7 @@ body {
 	}
 .div4 {
 	border: 5px outset teal;
-	height: 300px; width: 100%; float: left; 
+	height: 250px; width: 100%; float: left; 
 	text-align: center;
 	color: white;
 	}
@@ -89,7 +89,7 @@ body {
 </div>
 
 <div class = "div2">
-	<img src="Images\Me.jpg" alt="Tech" height = 800px; width = 1200px; >
+	<img src="Images\Me.jpg" alt="Tech" height = 100%; width = 100%; >
 </div>
 
 <div class= "div3">
@@ -110,7 +110,7 @@ body {
 <div class= "div4">
 <h2 style= "font-size: 40px;  text-shadow: 3px 3px 6px";> Mission Statement</h2>
 	<p style = "font-size: 25px";>
-	To try and become a better version of myself each and every day. Strive to make achieve my goals, 
+	To try and become a better version of myself each and every day. Strive to achieve my goals, 
 	and to treat people with kindess and respect.
 </div>
 
