--- a/missionS.html
+++ b/missionS.html
@@ -12,6 +12,18 @@ h1 a{
 	text-decoration: none;
 	color: #FFFFFF;
 	}
+.pic {
+      display: flex;
+      justify-content: flex-end; /* Align content to the right side */
+      height: 500vh; /* Adjust as needed */
+	  align-items:right;
+    }
+
+    .pic embed {
+      width: 50%;
+      height: 500px;
+    }
+
 
 </style>
 
@@ -20,11 +32,16 @@ h1 a{
 <a href="Portfolio.html">My Work</a></h1>
 
 	<div class = "container">
-		<embed src="https://joeygiesbrecht6.wixsite.com/jg3cards" width="50%" height="1000px"
+		<embed src="https://joeygiesbrecht6.wixsite.com/jg3cards" width="45%" height="1000px"
 		type="application/pdf">
-		</embed>
+		
 </div>
 
+	<div class = "pic">
+		<embed src="Images/code.jpg" width="48%" height="500px"
+		type="application/pdf"></embed>
+		
+</div>
 
 
 
