--- a/volWork.html
+++ b/volWork.html
@@ -14,7 +14,7 @@ h1 a{
 	}
 .voldiv1 {
 	border: 5px outset teal;
-	height: 350px; width: 50%; float: left; 
+	height: 800px; width: 50%; float: left; 
 	text-align: left;
 	color: white;
 	}
@@ -39,19 +39,26 @@ h1 a{
 
 <div class= "voldiv1">
 	<h2 style= "font-size: 40px; text-shadow: 3px 3px 6px; text-align: center";> Volunteer Experience</h2>
-	<p style = "font-size: 25px";>- I have been a high school basketball coach for 2 years now</br>
+	<p style = "font-size: 25px";>
+	<u>Basketball Coach</u></br>
+	- I have been a high school basketball coach for 2 years now</br>
 	</br>
 	- Helped high schoolers improve their basketball skills by coordinating drills</br>
 	</br>
 	-Learned to be a good leader</br>
 	</br>
-	-Also volunteered as a basketball ref on multiple occasions
+	-Also volunteered as a basketball ref on multiple occasions</br>
+	</br>
+	<u>IT Internship Town of Taber</u></br>
+	-Learned how to work in an IT workplace</br>
+	</br>
+	-Strengthened my networking and coding skills</br>
 	
 </div>
 
 
 <div class = "voldiv2">
-	<img src="Images\basketball.jpg" alt="Bball" height = 800px; >
+	<img src="Images\basketball.jpg" alt="Bball" height = 100%; width=100%; >
 </div>
 
 
