--- a/Resume.html
+++ b/Resume.html
@@ -24,8 +24,9 @@ h1 a{
 <a href="Portfolio.html">Resume</a></h1>
 
 	<div class = "container">
-		<embed src="Images\Joey Giesbrecht Resume-4.pdf" width="100%" height="1000px"
-		type="application/pdf">
+		<embed src="Images\JoeyResume (2).pdf" width="100%" height="1000px"
+		type="application/pdf";>
+		</embed>
 </div>
 
 
