--- a/Portfolio.html
+++ b/Portfolio.html
@@ -70,7 +70,7 @@ body {
 
 <div class = "topnav">
 	<a class="active" href = "#home">Home</a>
-	<a href = "missionS.html">My Work</a>
+	<a href = "myWork.html">My Work</a>
 	<a href = "volWork.html">Volunteer Work</a>
 	<a href = "Resume.html">Resume</a>
 </div>
