--- a/Resume.html
+++ b/Resume.html
@@ -16,12 +16,19 @@ h1 a{
 	text-decoration: none;
 	color: #FFFFFF;
 	}
+.home-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: teal; /* Set the background color */
+      color: white; /* Set the text color */
+      text-decoration: none; /* Remove the underline */
+    }
 
 </style>
 
+<a href="Portfolio.html"class = "home-button">Go to Homepage</a>
 <h1 style="background-color: teal; text-align: center; font-size: 50px;text-shadow:
-	3px 3px 6px; color: white;">
-<a href="Portfolio.html">Resume</a></h1>
+	3px 3px 6px; color: white;"></h1>
 
 	<div class = "container">
 		<embed src="Images\JoeyResume (2).pdf" width="100%" height="1000px"
