--- a/volWork.html
+++ b/volWork.html
@@ -28,14 +28,20 @@ h1 a{
   display: block;
   background-size:cover;
 }
+.home-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: teal; /* Set the background color */
+      color: white; /* Set the text color */
+      text-decoration: none; /* Remove the underline */
+    }
 
 
 </style>
 
-
+<a href="Portfolio.html"class = "home-button">Go to Homepage</a>
 <h1 style="background-color: teal; text-align: center; font-size: 50px;text-shadow:
-	3px 3px 6px; color: white;">
-<a href="Portfolio.html">Volunteer Work</a></h1>
+	3px 3px 6px; color: white;"></h1>
 
 <div class= "voldiv1">
 	<h2 style= "font-size: 40px; text-shadow: 3px 3px 6px; text-align: center";> Volunteer Experience</h2>
