--- a/Portfolio.html
+++ b/Portfolio.html
@@ -40,8 +40,8 @@ body {
 	}
 .div2 {
   border: 5px outset teal;
-  width: %; 
-  height: 810px; float: right;
+  width: 48%; 
+  float: right;
   margin-left: auto;
   margin-right: auto;
   display: block;
