--- a/Portfolio.html
+++ b/Portfolio.html
@@ -34,7 +34,7 @@ body {
 
 .div1 {
 	border: 5px outset teal;
-	height: 350px; width: 50%; float: left; 
+	width: 50%; float: left; 
 	text-align: left;
 	color: white;
 	}
